--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
   <footer class="footer-logo">
     <div class="container-logo-box">
       <div class="footer-logo-box"> 
-      <a class="logo-link" href="./index.html"
+      <a class="footer-logo-link" href="./index.html"
         >Web<span class="logo-part">Studio</span></a>
       <p class="logo-text">
         Increase the flow of customers and sales for your business with digital
