--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Effective Solutions</title>
+    <title>Effective Solutions for Your Business</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +49,7 @@
   <main>
     <section class="section-button">
       <div class="container title-button">
-        <h1 class="button-title">Solutions for Your Business</h1>
+        <h1 class="button-title">Effective Solutions for Your Business</h1>
 
         <button class="button-link" type="button">Order Service</button>
       </div>
