--- a/index.html
+++ b/index.html
@@ -53,25 +53,35 @@
 
         <button class="button-link" type="button">Order Service</button>
       </div>
+    </section> <section class="section-button">
+      <div class="container title-button">
+        <h1 class="button-title">Effective Solutions for Your Business</h1>
+        <button class="button-link" type="button">Order Service</button>
+      </div>
     </section>
 
-    <section class="section-description">
-      <div class="container description-main">
+  <section class="section-description">
+      <div class="container">
         <h2 class="description-h2">Core values</h2>
-          <ul>
-            <li>
-              <div class="container description-icons">
-              <svg 
-              class="icon-list" 
-              width="64"
-              height="64">
-                <use href="./images/icons.svg#icon-antenna">
-                </use>
-              </svg>
-            </div>
-            </li>
-            <li>
-              <div class="container description-icons">
+          <ul class="description-list">
+          <li class="description-item"> 
+            <div class="container description-icons">
+            <svg 
+            class="icon-list" 
+            width="64"
+            height="64">
+              <use href="./images/icons.svg#icon-antenna">
+              </use>
+            </svg>
+          </div>
+            <h3 class="description-title">Strategy</h3>
+            <p class="description-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="description-item">
+            <div class="container description-icons">
               <svg class="icon-list"
                 width="64"
                 height="64">
@@ -79,9 +89,14 @@
                 </use>
               </svg>
             </div>
-            </li>
-            <li>
-              <div class="container description-icons">
+            <h3 class="description-title">Punctuality</h3>
+            <p class="description-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="description-item">
+            <div class="container description-icons">
               <svg
               class="icon-list" 
               width="64"
@@ -90,9 +105,14 @@
                 </use>
               </svg>
             </div>
-            </li>
-            <li>
-              <div class="container description-icons">
+            <h3 class="description-title">Diligence</h3>
+            <p class="description-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="description-item">
+            <div class="container description-icons">
               <svg  
                 class="icon-list"
                 width="64"
@@ -101,31 +121,6 @@
                 </use>
               </svg>
             </div>
-            </li>
-          </ul>
-          <ul class="description-list">
-          <li class="description-item">
-            <h3 class="description-title">Strategy</h3>
-            <p class="description-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="description-title">Punctuality</h3>
-            <p class="description-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="description-title">Diligence</h3>
-            <p class="description-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="description-item">
             <h3 class="description-title">Technologies</h3>
             <p class="description-text">
               Design practice focused on digital experiences. We bring forth a
@@ -135,6 +130,7 @@
         </ul>
       </div>
     </section>
+    
     <section class="section-team">
       <div class="container team-photo">
         <h2 class="our-team-title">Our Team</h2>
