--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </ul>
       </div>
     </section>
-    
+
     <section class="section-team">
       <div class="container team-photo">
         <h2 class="our-team-title">Our Team</h2>
@@ -454,7 +454,7 @@
   </main>
 
   <footer class="footer-logo">
-    <div class="container-logo-box">
+    <div class="container-logo-box container">
       <div class="footer-logo-box"> 
       <a class="footer-logo-link" href="./index.html"
         >Web<span class="logo-part">Studio</span></a>
