--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
 
     <section class="section-team">
-      <div class="container team-photo">
+      <div class="container team-photo container">
         <h2 class="our-team-title">Our Team</h2>
         <ul class="team-img-list">
           <li class="team-list">
