--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       </div>
     </section>
     <section class="section-apps">
-      <div class="apps-portfolio">
+      <div class="apps-portfolio container">
         <h2 class="apps-service">Our Portfolio</h2>
         <ul class="apps-list">
           <li class="apps-item">
